// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Poster tests Poster must renders correctly with set poster 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#131d3d",
      "borderRadius": 8,
      "height": 180,
      "width": 122,
    }
  }
>
  <Image
    onError={[Function]}
    onLoad={[Function]}
    onLoadEnd={[Function]}
    onLoadStart={[Function]}
    onProgress={[Function]}
    resizeMode="contain"
    source={
      Object {
        "uri": "http://",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#e59f2b"
      hidesWhenStopped={true}
      size="large"
    />
  </View>
</View>
`;

exports[`Poster tests Poster must renders correctly with set poster and size = 'large' 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#131d3d",
      "borderRadius": 8,
      "height": 1027.6,
      "maxHeight": 443,
      "maxWidth": 300,
      "width": 734,
    }
  }
>
  <Image
    onError={[Function]}
    onLoad={[Function]}
    onLoadEnd={[Function]}
    onLoadStart={[Function]}
    onProgress={[Function]}
    resizeMode="contain"
    source={
      Object {
        "uri": "http://",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#e59f2b"
      hidesWhenStopped={true}
      size="large"
    />
  </View>
</View>
`;

exports[`Poster tests Poster must renders correctly with set poster and size = 'small' 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#131d3d",
      "borderRadius": 8,
      "height": 180,
      "width": 122,
    }
  }
>
  <Image
    onError={[Function]}
    onLoad={[Function]}
    onLoadEnd={[Function]}
    onLoadStart={[Function]}
    onProgress={[Function]}
    resizeMode="contain"
    source={
      Object {
        "uri": "http://",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#e59f2b"
      hidesWhenStopped={true}
      size="large"
    />
  </View>
</View>
`;

exports[`Poster tests Poster must renders correctly without set poster 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#131d3d",
      "borderRadius": 8,
      "flexDirection": "column",
      "height": 180,
      "justifyContent": "center",
      "width": 122,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontSize": 50,
        },
        null,
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Poster tests Poster must renders correctly without set poster and size = 'large' 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#131d3d",
      "borderRadius": 8,
      "flexDirection": "column",
      "height": 180,
      "justifyContent": "center",
      "width": 122,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontSize": 50,
        },
        null,
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Poster tests Poster must renders correctly without set poster and size = 'large' and smallOnEmptyPoster = 'false' 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#131d3d",
      "borderRadius": 8,
      "flexDirection": "column",
      "height": 1027.6,
      "justifyContent": "center",
      "maxHeight": 443,
      "maxWidth": 300,
      "width": 734,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontSize": 50,
        },
        null,
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Poster tests Poster must renders correctly without set poster and size = 'small' 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#131d3d",
      "borderRadius": 8,
      "flexDirection": "column",
      "height": 180,
      "justifyContent": "center",
      "width": 122,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontSize": 50,
        },
        null,
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Poster tests Poster must renders correctly without set poster and size = 'small' and smallOnEmptyPoster = 'false' 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#131d3d",
      "borderRadius": 8,
      "flexDirection": "column",
      "height": 180,
      "justifyContent": "center",
      "width": 122,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontSize": 50,
        },
        null,
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;
